TTTS-125 来塔状況をマウスホイール縦回転で左右スクロールできるように調整 / Vueプロジェクトのwebpackテンプレートをv1.2.4に更新 / 諸々整理

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width">
+<link rel="stylesheet" href="/static/swiper.css">
 <title>東京タワー業務用画面</title>
 </head>
 <body>
